Исправление ошибок, подготовка к тре́тьей защите проекта

--- a/css/style.css
+++ b/css/style.css
@@ -414,6 +414,28 @@ a {
   }
 }
 
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
 .search-form p {
   font-size: 14px;
   font-weight: 700;
@@ -1376,7 +1398,7 @@ a {
 
   padding-top: 48px;
   padding-left: 90px;
-  padding-right: 95px;
+  padding-right: 90px;
 }
 
 .main-reasons-item-wrapper p {
@@ -1503,6 +1525,10 @@ a {
   height: 592px;
 }
 
+.map iframe {
+  background-image: url(../img/map.jpg);
+}
+
 .main-footer {
   position: absolute;
   right: 0px;
@@ -1515,4 +1541,8 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: none;
+}
+
+.modal-error {
+  animation: shake 0.8s;
 }
